@@ -3,6 +3,7 @@ CHANGES.txt - 06/27/2002
 
 CHANGES IN CUPS V1.1.16
 
+	- Added support for Greek and Slovak PPD files.
 	- CUPS now supports printer names containing any
 	  printable character, e.g. "123-abc", "foo-bar", etc.
 	- The null filter was not supported in mime.convs due to
